--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -8,6 +8,14 @@
     fill: none;
 }
 
+.light .footer-socialNetworks-email-svg-path{
+    fill: #18191a !important;
+}
+
+.light .footer-socialNetworks-mastodon-svg-path{
+    fill: #18191a !important;
+}
+
 /* dark mode */
 .dark {
     --background-color: var(--background-color-dark) !important;
@@ -21,6 +29,16 @@
 
 .dark #footer-socialNetworks-github-svg-path{
     fill: #FFFFFF;
+}
+
+
+.dark .footer-socialNetworks-email-svg-path{
+    fill: #FFFFFF !important;
+}
+
+
+.dark .footer-socialNetworks-mastodon-svg-path{
+    fill: #FFFFFF !important;
 }
 
 .text-secondary {
