--- a/layouts/partials/sections/footer/socialNetwork.html
+++ b/layouts/partials/sections/footer/socialNetwork.html
@@ -1,7 +1,7 @@
 <div class="text-center pt-2">
     {{ if .Site.Params.footer.socialNetworks.github }}
     <span class="px-1">
-        <a href="{{ .Site.Params.footer.socialNetworks.github }}" aria-label="github">
+        <a href="{{ .Site.Params.footer.socialNetworks.github }}" target="_blank" aria-label="github">
             <svg xmlns="http://www.w3.org/2000/svg" width="2.7em" height="2.7em" viewBox="0 0 1792 1792">
                 <path id="footer-socialNetworks-github-svg-path"
                     d="M522 1352q-8 9-20-3-13-11-4-19 8-9 20 3 12 11 4 19zm-42-61q9 12 0 19-8 6-17-7t0-18q9-7 17 6zm-61-60q-5 7-13 2-10-5-7-12 3-5 13-2 10 5 7 12zm31 34q-6 7-16-3-9-11-2-16 6-6 16 3 9 11 2 16zm129 112q-4 12-19 6-17-4-13-15t19-7q16 5 13 16zm63 5q0 11-16 11-17 2-17-11 0-11 16-11 17-2 17 11zm58-10q2 10-14 14t-18-8 14-15q16-2 18 9zm964-956v960q0 119-84.5 203.5t-203.5 84.5h-224q-16 0-24.5-1t-19.5-5-16-14.5-5-27.5v-239q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-121-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-86-13.5q-44 113-7 204-79 85-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-40 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 .5 103t.5 68q0 22-11 33.5t-22 13-33 1.5h-224q-119 0-203.5-84.5t-84.5-203.5v-960q0-119 84.5-203.5t203.5-84.5h960q119 0 203.5 84.5t84.5 203.5z" />
@@ -28,7 +28,7 @@
 
     {{ if .Site.Params.footer.socialNetworks.linkedin }}
     <span class="px-1">
-        <a href="{{ .Site.Params.footer.socialNetworks.linkedin }}" aria-label="linkedin">
+        <a href="{{ .Site.Params.footer.socialNetworks.linkedin }}" target="_blank" aria-label="linkedin">
             <svg xmlns="http://www.w3.org/2000/svg" width='2.4em' height='2.4em' fill="#fff" aria-label="LinkedIn"
                 viewBox="0 0 512 512">
                 <rect width="512" height="512" fill="#0077b5" rx="15%" />
@@ -41,7 +41,7 @@
     {{ end }}
 
     {{ if .Site.Params.footer.socialNetworks.twitter }}
-    <a href="{{ .Site.Params.footer.socialNetworks.twitter }}" aria-label="twitter">
+    <a href="{{ .Site.Params.footer.socialNetworks.twitter }}" target="_blank" aria-label="twitter">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="48px" height="48px">
             <path fill="#03a9f4"
                 d="M42,37c0,2.762-2.239,5-5,5H11c-2.762,0-5-2.238-5-5V11c0-2.762,2.238-5,5-5h26c2.761,0,5,2.238,5,5 V37z" />
@@ -52,7 +52,7 @@
     {{ end }}
 
     {{ if .Site.Params.footer.socialNetworks.instagram }}
-    <a href="{{ .Site.Params.footer.socialNetworks.instagram }}" aria-label="instagram">
+    <a href="{{ .Site.Params.footer.socialNetworks.instagram }}" target="_blank" aria-label="instagram">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="48px" height="48px">
             <radialGradient id="yOrnnhliCrdS2gy~4tD8ma" cx="19.38" cy="42.035" r="44.899"
                 gradientUnits="userSpaceOnUse">
@@ -83,7 +83,7 @@
     {{ end }}
 
     {{ if .Site.Params.footer.socialNetworks.facebook }}
-    <a href="{{ .Site.Params.footer.socialNetworks.facebook }}" aria-label="facebook">
+    <a href="{{ .Site.Params.footer.socialNetworks.facebook }}" target="_blank" aria-label="facebook">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="48px" height="48px">
             <path fill="#3F51B5"
                 d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5V37z" />
@@ -93,7 +93,7 @@
     </a>
     {{ end }}
     {{ if .Site.Params.footer.socialNetworks.mastodon }}
-    <a href="{{ .Site.Params.footer.socialNetworks.mastodon }}" aria-label="mastodon">
+    <a href="{{ .Site.Params.footer.socialNetworks.mastodon }}" target="_blank" aria-label="mastodon">
         <svg fill="#000000" viewBox="0 0 24 24" width="48px" height="48px" xmlns="http://www.w3.org/2000/svg" xml:space="preserve"><path d="M21.327 8.566c0-4.339-2.843-5.61-2.843-5.61-1.433-.658-3.894-.935-6.451-.956h-.063c-2.557.021-5.016.298-6.45.956 0 0-2.843 1.272-2.843 5.61 0 .993-.019 2.181.012 3.441.103 4.243.778 8.425 4.701 9.463 1.809.479 3.362.579 4.612.51 2.268-.126 3.541-.809 3.541-.809l-.075-1.646s-1.621.511-3.441.449c-1.804-.062-3.707-.194-3.999-2.409a4.523 4.523 0 0 1-.04-.621s1.77.433 4.014.536c1.372.063 2.658-.08 3.965-.236 2.506-.299 4.688-1.843 4.962-3.254.434-2.223.398-5.424.398-5.424zm-3.353 5.59h-2.081V9.057c0-1.075-.452-1.62-1.357-1.62-1 0-1.501.647-1.501 1.927v2.791h-2.069V9.364c0-1.28-.501-1.927-1.502-1.927-.905 0-1.357.546-1.357 1.62v5.099H6.026V8.903c0-1.074.273-1.927.823-2.558.566-.631 1.307-.955 2.228-.955 1.065 0 1.872.409 2.405 1.228l.518.869.519-.869c.533-.819 1.34-1.228 2.405-1.228.92 0 1.662.324 2.228.955.549.631.822 1.484.822 2.558v5.253z"/></svg>
     </a>
     {{ end }}
