improve header logo

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -42,7 +42,9 @@ header .nav-link{
 .navbar-brand {
     color: var(--primary-color) !important;
     opacity: 0.95;
+    font-size: 1.5rem !important;
 } 
+
 .navbar .nav-link:hover {
     color: var(--primary-color) !important;
 }
