--- a/layouts/partials/sections/footer/copyright.html
+++ b/layouts/partials/sections/footer/copyright.html
@@ -4,7 +4,7 @@
             {{ if or .Site.Params.navbar.brandLogo .Site.Params.favicon }}
                 <div class="pb-2">
                     <a href="{{ .Site.BaseURL }}" title="{{ .Site.Title }}">
-                        <img alt="Footer logo" src="{{ .Site.Params.navbar.brandLogo | default .Site.Params.favicon }}"
+                        <img alt="Footer logo" src="{{ .Site.Params.staticPath }}/{{ .Site.Params.navbar.brandLogo | default .Site.Params.favicon }}"
                             height="40px">
                     </a>
                 </div>
