--- a/layouts/partials/sections/header.html
+++ b/layouts/partials/sections/header.html
@@ -52,7 +52,7 @@
             <!-- navbar brand -->
             <a class="navbar-brand primary-font text-wrap" href="{{ .Site.BaseURL | relURL }}">
                 {{ if and (or (.Site.Params.favicon) (.Site.Params.navbar.brandLogo)) (.Site.Params.navbar.showBrandLogo | default true) }}
-                <img src="{{ .Site.Params.navbar.brandLogo | default .Site.Params.favicon }}" width="50px"
+                <img src="{{ .Site.Params.staticPath }}/{{ .Site.Params.navbar.brandLogo | default .Site.Params.favicon }}" width="50px"
                     class="d-inline-block align-middle">
                 {{ .Site.Params.navbar.brandName | default .Site.Params.title }}
                 {{ else }}
