--- a/layouts/partials/sections/achievements.html
+++ b/layouts/partials/sections/achievements.html
@@ -10,7 +10,7 @@
                     <a class="card my-3 h-100 p-3" href="{{ .url }}" title="{{ .title }}" target="_blank">
                         {{if .image }}
                             <div class="card-head">
-                                <img class="card-img-top" src="{{ .Site.Params.staticPath }}/{{ .image }}">
+                                <img class="card-img-top" src="{{ .image }}">
                             </div>
                         {{ end }}
                         <div class="card-body bg-transparent">
@@ -26,7 +26,7 @@
                     <div class="card my-3 h-100 p-3" title="{{ .title }}">
                         {{if .image }}
                             <div class="card-head">
-                                <img class="card-img-top" src="{{ .Site.Params.staticPath }}/{{ .image }}">
+                                <img class="card-img-top" src="{{ .image }}">
                             </div>
                         {{ end }}
                         <div class="card-body bg-transparent">
