--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -43,7 +43,7 @@
       </div>
       <div class="col-sm-12 col-md-12 col-lg-3">
         <div id="stickySideBar" class="sticky-sidebar">
-          {{ if .Params.toc | default true}}
+          {{ if .Params.toc | default false}}
           <aside class="toc">
               <h5>
                 {{ .Site.Params.terms.toc | default "Table Of Contents" }}
