deactivate base href

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,7 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
 
-<base href="{{ .Site.BaseURL }}">
+<!-- <base href="{{ .Site.BaseURL }}"> -->
 
 <link rel="icon" href="{{ .Site.Params.favicon | default "{{ .Site.Params.staticPath }}/fav.png" }}" type="image/gif">
 
